# faint

./: .gitignore  pyproject.toml
faint/: bbcode.py  cli.py  data.py  favs.py  gallery.py  profile.py  scrapy.cfg  settings.py  util.py  utils.py
faint/scraper/: items.py  middlewares.py  pipelines.py  settings.py
faint/scraper/spiders/: bbcode.py  favs.py  profile.py  settings.py  user.py  utils.py
tests/: test_bbcode.py  test_faint.py
