[tool.poetry]
name = "faint"
version = "0.1.0"
description = ""
authors = ["WrenFing"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
dateparser = "^1.0.0"
httpx = "^0.17.1"
lxml = "^4.6.3"
click = "^7.1.2"
click-logging = "^1.0.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
faint = "faint.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
